[tool.poetry]
name = "resource-noti"
version = "0.1.0"
description = ""
authors = ["Seungcheol Shin <jn8366ew@github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
mysqlclient = "^2.2.6"
alembic = "^1.14.0"
pydantic = {extras = ["mypy"], version = "^2.10.4"}
pytest = "^8.3.4"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ["tests/*", "__pycache__", ".venv", "migrations/*", ".env"]